kaydet butonu adı değiştirildi

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 		
 		<div class="flex gap-3">
 			<button id="btnSaveStatuses" class="bg-red-500 text-white p-2 rounded-lg text-sm hover:bg-red-600 transition duration-150 hidden">
-				Statü Değişikliklerini Kaydet
+				Değişiklikleri Kaydet
 			</button>
 			
 			<button id="btnExportJSON" class="bg-gray-600 text-white p-2 rounded-lg text-sm hover:bg-gray-700 transition duration-150">JSON Aktar</button>
@@ -688,4 +688,5 @@
         });
     </script>
 </body>
+
 </html>
