bug fix: KitapYok yerine Kitabı yok yazınca oluşan hata
bug fix: KitapYok yerine Kitabı yok yazınca oluşan hata yeniden eski haline çevrilerek düzeltildi

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
     <script>
 		let classes; 
 		let currentClass = '';
-		const cycleStatuses = ["Yaptı", "Yapmadı", "Eksik", "Gelmedi", "Kitabı yok"];
+		const cycleStatuses = ["Yaptı", "Yapmadı", "Eksik", "Gelmedi", "KitapYok"];
         document.addEventListener('DOMContentLoaded', function(){
 		
             classes = JSON.parse(localStorage.getItem('classes') || '{}');
@@ -712,5 +712,6 @@
     </script>
 </body>
 </html>
+
 
 
