rozetin yazı puntosu büyütülüp daha rahat anlaşılması sağlandı, gölge kaldırıldı.

--- a/index.html
+++ b/index.html
@@ -343,9 +343,9 @@
 							
 							// Gecikme Bilgisini içeren DIV (Görsel ve Gün Sayısı)
 							lateIndicator = `<span class="absolute top-[2px] right-[2px] 
-												bg-white-600 rounded-full text-[0.6rem] 
-												font-bold p-0.5 leading-none text-white 
-												shadow-md">
+												bg-white-600 rounded-full text-[0.8rem] 
+												 p-0.5 leading-none text-white 
+												">
 												⏰${diffDays}
 											</span>`;
 						}
@@ -481,9 +481,9 @@
 								// renderTable'dan gelen aynı DIV yapısı
 								console.log(`GECİKME BULUNDU! Gün Farkı: ${diffDays}`); // BURAYI EKLEYİN
 								lateIndicatorHTML = `<span class="absolute top-[2px] right-[2px] 
-															bg-white-600 rounded-full text-[0.6rem] 
-															font-bold p-0.5 leading-none text-white 
-															shadow-md">
+															bg-white-600 rounded-full text-[0.8rem] 
+															 p-0.5 leading-none text-white 
+															">
 														⏰${diffDays}
 													</span>`;
 							}
