Tablo başlığı yazısı değiştirildi ve punto küçültüldü.

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 <div id="tableHeaderArea" class="mt-4 mb-3 flex justify-between items-center p-2 bg-white rounded-lg shadow-md">
         
 	
-		<h2 id="currentClassNameDisplay" class="text-xl font-bold text-gray-700">Lütfen Bir Sınıf Seçin</h2>
+		<h2 id="currentClassNameDisplay" class="text-l font-bold text-gray-700">Lütfen Bir Sınıf Seçin</h2>
 		
 		<div class="flex gap-3 items-center">
 			<button id="btnSaveStatuses" class="bg-red-500 text-white p-2 rounded-lg text-sm hover:bg-red-600 transition duration-150 hidden">
@@ -313,12 +313,12 @@
 				display.innerHTML = `
 					${currentClass} Sınıfı 
 					<span id="editableLessonName" 
-						  contenteditable="false"
-						  title="Dersi değiştirmek için çift tıklayın."
-						 class="text-blue-700 font-bold p-1 rounded cursor-pointer whitespace-nowrap
-                  focus:outline-none border border-transparent hover:bg-blue-50"
+						contenteditable="false"
+						title="Dersi değiştirmek için çift tıklayın."
+						class="text-l text-blue-700 font-bold p-1 rounded cursor-pointer whitespace-nowrap
+						focus:outline-none border border-transparent hover:bg-blue-50"
 						  >${lessonName}</span> 
-					Dersi Ödev Takibi
+					Dersi Ödev Tablosu
 				`;
 				
 				// Ders Adı Düzenleme Olay Dinleyicilerini Ekle
