tablo genişliği üst alanlar gibi sayfanın tamamını kaplaması için ayarlandı.

--- a/index.html
+++ b/index.html
@@ -165,8 +165,8 @@
 				<button id="btnExportCSV" class="bg-gray-600 text-white p-2 rounded-lg text-sm hover:bg-gray-700 transition duration-150">Excele Aktar</button>			
 			</div>	
 		</div>
-		<div class="overflow-x-auto shadow-lg rounded-lg" >
-			<table id="homeworkTable" class="divide-y divide-gray-200">
+		<div class="overflow-x-auto shadow-lg rounded-lg w-full" >
+			<table id="homeworkTable" class="divide-y divide-gray-200 min-w-full">
 				<thead id="tableHead" class="bg-blue-600">
 				</thead>
 				<tbody id="homeworkBody" class="bg-white divide-y divide-gray-200">
