--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 			<!--ödevleri filtreleme-->
 			<div id="filterDiv" class="filter-area flex flex-wrap  items-center">
 				<input type="text" id="filterText" placeholder="Ödev Ara (Kaynak, Konu, Sayfa)" 
-					   class="p-2 border border-gray-300 rounded-lg focus:ring-blue-500 focus:border-blue-500 flex-grow w-[250px]">
+					   class="p-2 border border-gray-300 rounded-lg focus:ring-blue-500 focus:border-blue-500 flex-grow w-full">
 				
 			</div>
 			
@@ -1057,4 +1057,5 @@
 
 </body>
 </html>
+
 
