filtre eklemeye yeni özellik eklendi

--- a/index.html
+++ b/index.html
@@ -1012,6 +1012,9 @@
 						}
 					}
 					
+				document.getElementById('filterText').value = '';
+				applyFilter();
+					
 				} else {
 					// Masaüstü Desteği (İndirme)
 					const dl = document.createElement('a');
